[package]
name = "service"
version = "0.0.1"
authors = ["kazami <kazamizero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
may = "0.3.19"
tokio = { version = "1", features = ["full"] }
jsonrpsee-http-client = "0.2.0-alpha.4"
jsonrpsee-http-server = "0.2.0-alpha.4"
jsonrpsee-types = "0.2.0-alpha.4"
task = { path = "../task", version = "0.0.1" }
sched = { path = "../sched", version = "0.0.1" }

