[package]
name = "task"
version = "0.0.1"
authors = ["kazami <kazamizero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
may = "0.3.19"
wasmtime = "0.26.0"
wasmtime-wasi = "0.26.0"
tracing-subscriber = "0.2.16"
anyhow = "1.0.19"
